--- a/prog_lab6_gradle/build.gradle
+++ b/prog_lab6_gradle/build.gradle
@@ -28,6 +28,7 @@ subprojects {
         compileOnly 'org.projectlombok:lombok:1.18.36'
         annotationProcessor 'org.projectlombok:lombok:1.18.36'
         // Jackson
+        implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
         implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
         implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
 
